--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -73,6 +73,7 @@
     <sys:String x:Key="LOCSucessStoryFilterSource">Filtrer par source</sys:String>
     <sys:String x:Key="LOCSucessStorySearch">Recherche</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Progression globale</sys:String>
+    <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [jeux lancés]</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Information</sys:String>
 
     <!-- ListViewGames -->
@@ -85,6 +86,7 @@
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Tous les succès obtenus par mois</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitleALLDay">Tous les succès obtenus par jour</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Succès obtenus par mois</sys:String>
+    <sys:String x:Key="LOCSucessStoryGraphicTitleSources">Succès obtenus par sources</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitleDay">Succès obtenus par jour</sys:String>
     
 </ResourceDictionary>
