--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -73,6 +73,7 @@
     <sys:String x:Key="LOCSucessStoryFilterSource">Filtruj wg źródła</sys:String>
     <sys:String x:Key="LOCSucessStorySearch">Szukaj</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Ogólny postęp</sys:String>
+    <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [games launched]</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Informacja</sys:String>
 
     <!-- ListViewGames -->
@@ -85,6 +86,7 @@
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Wszystkie odblokowane osiągnięcia według miesiąca</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitleALLDay">Wszystkie odblokowane osiągnięcia według dnia</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitle">Odblokowane osiągnięcia według miesiąca</sys:String>
+    <sys:String x:Key="LOCSucessStoryGraphicTitleSources">Achievements unlocked by sources</sys:String>
     <sys:String x:Key="LOCSucessStoryGraphicTitleDay">Odblokowane osiągnięcia według dnia</sys:String>
     
 </ResourceDictionary>
