--- a/Views/Interface/SuccessStoryAchievementsGraphics.xaml
+++ b/Views/Interface/SuccessStoryAchievementsGraphics.xaml
@@ -6,10 +6,10 @@
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
-             mc:Ignorable="d">
+             mc:Ignorable="d" Height="120">
  
     <!-- TODO https://github.com/Live-Charts/Live-Charts/issues/619 -->
-    <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="Bottom" Loaded="StatsGraphicAchievements_Loaded">
+    <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="Bottom" Loaded="StatsGraphicAchievements_Loaded" Height="120">
         <lvc:CartesianChart.DataTooltip>
             <localLVC:CustomerToolTipForSingle />
         </lvc:CartesianChart.DataTooltip>
