--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -12,6 +12,8 @@
     SuccessStorySettingsView
     -->
 
+    <sys:String x:Key="LOCSucessStoryProgressBar">Treatment in progress...</sys:String>
+
     <sys:String x:Key="LOCSucessStoryEnableSteam">Включить достижения Steam</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableGog">Включить достижения GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Включить достижения Origin</sys:String>
