--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -55,6 +55,7 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Afficher une barre de progression</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Avec indicateur</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">Avec pourcentage</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">Avec titre</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de données des succès a bien été réinitialisées.</sys:String>
 
