--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -55,6 +55,7 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Wyświetlaj pasek postępu</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Ze wskaźnikiem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">Z procentem</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">With title</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">Baza danych osiągnieć została zresetowana.</sys:String>
 
