--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -55,6 +55,7 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Отображать прогрес:</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Индикатором</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">В процентах</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">With title</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">База достижений была обновлена.</sys:String>
 
