--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -56,6 +56,8 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Ze wskaźnikiem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">Z procentem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">With title</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">Baza danych osiągnieć została zresetowana.</sys:String>
 
