--- a/Localization/ru_RU.xaml
+++ b/Localization/ru_RU.xaml
@@ -56,6 +56,8 @@
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarIndicator">Индикатором</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBarPercent">В процентах</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphicTitle">With title</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
+    <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">База достижений была обновлена.</sys:String>
 
